<resources>
    <string name="app_name">FoodCall</string>
    <string name="hint_mobile">Mobile Number (10 digits)</string>
    <string name="hint_password">Password (min. length 4)</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_name">Name (min. 3 character)</string>
    <string name="hint_cnfPassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_new_password">New Password (min. 6 characters)</string>
    <string name="hint_otp">OTP (length 4)</string>
    <string name="preference_file_name">User Login Preference</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userID">12</string>
    <string name="cost_low_to_high">Price (Low to High)</string>
    <string name="cost_high_to_low">Price (High to Low)</string>
    <string name="rating">Rating</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="my_profile">My Profile</string>
    <string name="order_from">Order From :</string>
    <string name="place_order">Place Order (Total: ₹786)</string>
    <string name="next">NEXT</string>
    <string name="forget_prompt">Enter your registered mobile no. and email address below:</string>
    <string name="login_signup">Don\'t have an account? Sign Up here</string>
    <string name="menu">Menu</string>
    <string name="menu_header">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="placed_prompt">Your order has successfully placed!</string>
    <string name="ok">OK</string>
    <string name="reset_prompt">Enter the received OTP</string>
    <string name="submit">Submit</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="register">Register</string>
    <string name="signup_login">Already Registered? LogIn</string>
    <string name="username">UserName</string>
    <string name="dummy_mobile">+91-1234567890</string>
    <string name="favorite_prompt">You do not have any favorite restaurants</string>
    <string name="history_header">You previous orders are listed below:</string>
    <string name="name">Name</string>
    <string name="dummy_address">Address Pin.123456</string>
    <string name="dummy_email">example@abc.com</string>
    <string name="dummy_menu_item">Aaloo Tadka</string>
    <string name="dummy_price">₹786</string>
    <string name="add">Add</string>
    <string name="menuitem">MenuItem</string>
    <string name="dummy_date">12/04/2020</string>
    <string name="restaurant">Restaurant</string>
    <string name="title">Title</string>
    <string name="dummy_rating">4.1</string>
    <string name="per_person">/person</string>
    <string name="question1">Q.1 How will the training be delivered?</string>
    <string name="answer1">A.1 You will be taught using pre-recorded videos and text tutorials. The training has quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project to get hands-on practice of what you learn during your training</string>
    <string name="answer2">A.2 As this is a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="question2">Q.2 What will be the timings of the training?</string>
    <string name="question3">Q.3 What is the duration of training?</string>
    <string name="answer3">A.3 The training duration is of 6 weeks.</string>
    <string name="question4">Q.4 How much time should I spend everyday?</string>
    <string name="answer4">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="question5">Q.5 When can I start my training?</string>
    <string name="answer5">A.5 You can choose your preferred batch date while signing up for the training program.</string>
    <string name="question6">Q.6 When will I get the certificate?</string>
    <string name="answer6">A.6 You will be able to download the certificate once you complete your training and take the final test.</string>
</resources>
