<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/menuHome"
                android:title="Home"
                android:icon="@drawable/ic_home"
                />

        <item
                android:id="@+id/menuProfile"
                android:title="@string/my_profile"
                android:icon="@drawable/ic_user"
                />

        <item
                android:id="@+id/menuFavourite"
                android:title="@string/favorite_restaurants"
                android:icon="@drawable/ic_favorite"
                />

        <item
                android:id="@+id/menuOrder"
                android:title="@string/order_history"
                android:icon="@drawable/ic_history"
                />

        <item
                android:id="@+id/menuFaq"
                android:title="FAQs"
                android:icon="@drawable/ic_faq"
                />

        <item
                android:id="@+id/menuLogout"
                android:title="LogOut"
                android:icon="@drawable/ic_logout"
                />

    </group>
</menu>