<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_prompt"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"
            android:layout_marginTop="80dp"
            />

    <EditText
            android:id="@+id/edtOtp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:background="@color/whiteColor"
            android:hint="@string/hint_otp"
            android:drawableLeft="@drawable/ic_otp"
            android:drawablePadding="10dp"
            />

    <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@color/whiteColor"
            android:hint="@string/hint_new_password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            />

    <EditText
            android:id="@+id/edtCnfNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@color/whiteColor"
            android:hint="@string/hint_cnfPassword"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            />

    <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="8dp"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"
            android:background="@color/btnColor"
            />

</LinearLayout>