<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:background="@color/whiteColor"
            android:hint="@string/hint_name"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="15dp"
            />

    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtUserName"
            android:padding="10dp"
            android:background="@color/whiteColor"
            android:hint="@string/hint_email"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            />

    <EditText
            android:id="@+id/edtRegMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtEmail"
            android:padding="10dp"
            android:background="@color/whiteColor"
            android:hint="@string/hint_mobile"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="15dp"
            />

    <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtRegMobile"
            android:padding="10dp"
            android:background="@color/whiteColor"
            android:hint="@string/delivery_address"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="15dp"
            />

    <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtAddress"
            android:padding="10dp"
            android:background="@color/whiteColor"
            android:hint="@string/hint_password"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"
            />

    <EditText
            android:id="@+id/edtCnfPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtPassword"
            android:padding="10dp"
            android:background="@color/whiteColor"
            android:hint="@string/hint_cnfPassword"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"
            />

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/edtCnfPassword"
            android:textSize="20sp"
            android:textColor="@color/whiteColor"
            android:padding="8dp"
            android:background="@color/btnColor"
            />

    <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_login"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            />

</RelativeLayout>