<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimary"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/forget_prompt"
            android:textSize="16sp"
            android:textColor="@color/whiteColor"
            />

    <EditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_mobile"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:background="@color/whiteColor"
            />

    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:maxLines="1"
            android:background="@color/whiteColor"
            />

    <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/whiteColor"
            android:padding="8dp"
            android:background="@color/btnColor"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            />

</LinearLayout>