<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:weightSum="10"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:layout_margin="5dp"
              android:id="@+id/recyclerMenuItem"
              >

    <TextView
            android:id="@+id/txtSrNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textSize="18sp"
            android:textColor="#B4B0B0"
            android:padding="5px"
            android:layout_gravity="center_vertical"
            />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="6.5"
            >

        <TextView
                android:id="@+id/txtMenuName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuitem"
                android:textSize="15sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"
                android:layout_margin="2dp"
                />


        <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                android:textSize="14sp"
                android:textColor="#B4B0B0"
                android:layout_marginLeft="10dp"
                />

    </LinearLayout>

    <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2.5"
            android:text="@string/add"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_vertical"
            />

</LinearLayout>